# rust_xlsx_wasm_example

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  README.md
src/: lib.rs  main.rs
src/wasm_manager/: mod.rs  native.rs
src/wasm_manager/javascript/: fs.rs  log.rs  mod.rs
src/wasm_manager/native/: fs.rs  log.rs  mod.rs
static_data/browser/: index.html  index.js
