[package]
name = "rust_xlsx_wasm_example"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
# WASI will compile to a binary, like most targets do
name = "bin_example"
path = "src/main.rs"

[features]
default = []
browser = ["dep:web-sys"]
nodejs = []
deno = []

[dependencies]
rust_xlsxwriter = { git = "https://github.com/jmcnamara/rust_xlsxwriter.git", branch = "wasm", features = [
	"wasm",
] }

[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
	"Window",
	"Document",
	"Url",
	"Blob",
	"HtmlAnchorElement",
], optional = true }
