[package]
name = "rust_xlsx_wasm_example"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
# WASI will compile to a binary, like most targets do
name = "bin_example"
path = "src/main.rs"

[features]
default = []
browser = ["javascript", "dep:web-sys"]
nodejs = ["javascript"]
deno = ["javascript"]
javascript = ["dep:js-sys", "dep:wasm-bindgen"]

[dependencies]
rust_xlsxwriter = { version = ">=0.47.0", features = ["wasm"] }
wasm-bindgen = { version = "0.2.87", optional = true }
js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", features = [
	"Window",
	"Document",
	"Url",
	"Blob",
	"HtmlAnchorElement",
], optional = true }
